--- a/jeaf-generator-test-service-objects-jakarta/src-gen/main/resources/base/product-base.yml
+++ b/jeaf-generator-test-service-objects-jakarta/src-gen/main/resources/base/product-base.yml
@@ -359,7 +359,7 @@ components:
         discountOffers:
           type: array
           items:
-            $ref: '#/components/schemas/StringCodeType'
+            type: string
           deprecated: true
           nullable: true
 
@@ -748,7 +748,7 @@ components:
         campaigns:
           type: array
           items:
-            $ref: '#/components/schemas/StringCodeType'
+            type: string
           deprecated: true
           uniqueItems: true
           nullable: true
@@ -1099,7 +1099,7 @@ components:
             evenMoreLinks:
               type: array
               items:
-                $ref: '#/components/schemas/StringCodeType'
+                type: string
               deprecated: true
               uniqueItems: true
               nullable: true
@@ -2002,7 +2002,7 @@ components:
           minimum: 0
           nullable: false
         theSoftLink:
-          $ref: '#/components/schemas/StringCodeType'
+          type: string
           nullable: false
 
     # com.anaptecs.jeaf.junit.openapi.base.StopPlaceRef
