--- a/jeaf-generator-test-service-objects-jakarta/src-gen/main/resources/products/product-services.yml
+++ b/jeaf-generator-test-service-objects-jakarta/src-gen/main/resources/products/product-services.yml
@@ -2059,5 +2059,36 @@ components:
           nullable: false
         sale:
           $ref: '../base/product-base.yml#/components/schemas/Channel'
+    # com.anaptecs.jeaf.junit.pojo.softlink.SoftLinkPartner
+    SoftLinkPartner:
+      type: object
+      additionalProperties: false
+      required:
+        - longLinks
+        - derivedSoftLink
+      properties:
+        theBackLink:
+          type: string
+          nullable: true
+        childLinks:
+          type: array
+          items:
+            type: string
+          uniqueItems: true
+          nullable: true
+        longLinks:
+          type: array
+          items:
+            type: integer
+            format: int64
+          nullable: false
+        derivedSoftLink:
+          type: string
+          nullable: false
+        theDerivedSoftLinks:
+          type: array
+          items:
+            type: string
+          nullable: true
 
       
