--- a/pom.xml
+++ b/pom.xml
@@ -52,8 +52,8 @@
 		<jeaf.validation.impl.version>1.8.0</jeaf.validation.impl.version>
 		<jeaf.rest.api.version>2.0.0-RC1</jeaf.rest.api.version>
 		<jeaf.rest.impl.version>2.0.0-RC1</jeaf.rest.impl.version>
-		<jeaf.test.model.version>2.7.2-SNAPSHOT</jeaf.test.model.version>
-		<jeaf.generator.messages.version>1.20.1-SNAPSHOT</jeaf.generator.messages.version>
+		<jeaf.test.model.version>2.8.0</jeaf.test.model.version>
+		<jeaf.generator.messages.version>1.21.0</jeaf.generator.messages.version>
 		
 		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
 		<spring.boot.version>3.5.7</spring.boot.version>
