--- a/jeaf-generator-test-spring-jersey/pom.xml
+++ b/jeaf-generator-test-spring-jersey/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf.generator</groupId>
 		<artifactId>jeaf-generator-project</artifactId>
-		<version>1.27.6-SNAPSHOT</version>
+		<version>1.28.0</version>
 	</parent>
 
 	<name>JEAF Generator Test Spring Jersey</name>
