--- a/jeaf-generator-test-spring-boot3/pom.xml
+++ b/jeaf-generator-test-spring-boot3/pom.xml
@@ -29,7 +29,7 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
-			<version>${jackson.version}</version>
+			<version>${jackson2.version}</version>
 		</dependency>
 
 		<dependency>
