--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.anaptecs.jeaf</groupId>
 		<artifactId>jeaf-plugin-project-parent</artifactId>
-		<version>1.17.0</version>
+		<version>1.17.1-SNAPSHOT</version>
 	</parent>
 
 	<groupId>com.anaptecs.jeaf.generator</groupId>
@@ -56,9 +56,9 @@
 		<jeaf.generator.messages.version>1.21.0</jeaf.generator.messages.version>
 		
 		<!-- Please be aware that Spring Boot and Spring core versions must match together -->
-		<spring.boot.version>3.5.7</spring.boot.version>
-		<spring.core.version>6.2.12</spring.core.version>
-		<spring.security.version>6.5.6</spring.security.version>
+		<spring.boot3.version>3.5.7</spring.boot3.version>
+		<spring.core6.version>6.2.12</spring.core6.version>
+		<spring.security7.version>6.5.6</spring.security7.version>
 		<jakartaee-api.version>11.0.0</jakartaee-api.version>
 		<jakarta.ws.version>3.1.0</jakarta.ws.version>
 		<reactor-core.version>3.8.1</reactor-core.version>
@@ -133,9 +133,9 @@
 				<jdk>17</jdk>
 			</activation>
 			<properties>
-				<spring.boot.version>3.5.0</spring.boot.version>
-				<spring.core.version>6.2.7</spring.core.version>
-				<spring.security.version>5.7.10</spring.security.version>
+				<spring.boot3.version>3.5.0</spring.boot3.version>
+				<spring.core6.version>6.2.7</spring.core6.version>
+				<spring.security7.version>5.7.10</spring.security7.version>
 			</properties>
 		</profile>
 	</profiles>
