--- a/jeaf-generator-test-open-api-internal-service-objects/pom.xml
+++ b/jeaf-generator-test-open-api-internal-service-objects/pom.xml
@@ -52,7 +52,7 @@
 		<dependency>
 		    <groupId>com.fasterxml.jackson.core</groupId>
 		    <artifactId>jackson-databind</artifactId>
-		    <version>${jackson.version}</version>
+		    <version>${jackson2.version}</version>
 		</dependency>
 
 		<dependency>
