--- a/jeaf-generator-test-pojos/pom.xml
+++ b/jeaf-generator-test-pojos/pom.xml
@@ -27,7 +27,7 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>${jackson.version}</version>
+			<version>${jackson2.version}</version>
 		</dependency>
 
 		<!-- Dependency is required as of Java 11 javax.annotations are no longer part of standard JDK -->
