--- a/jeaf-generator-test-spring-jersey/pom.xml
+++ b/jeaf-generator-test-spring-jersey/pom.xml
@@ -15,31 +15,31 @@
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-validation</artifactId>
-		    <version>${spring.boot.version}</version>
+		    <version>${spring.boot3.version}</version>
 		</dependency>
 		
 		<dependency>
 		  <groupId>org.springframework</groupId>
 		  <artifactId>spring-context</artifactId>
-		  <version>${spring.core.version}</version>
+		  <version>${spring.core6.version}</version>
 		</dependency>
 
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-jersey</artifactId>
-		    <version>${spring.boot.version}</version>
+		    <version>${spring.boot3.version}</version>
 		</dependency>
 
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-actuator</artifactId>
-		    <version>${spring.boot.version}</version>
+		    <version>${spring.boot3.version}</version>
 		</dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <version>${spring.boot.version}</version>
+            <version>${spring.boot3.version}</version>
             <scope>test</scope>            
         </dependency>
 
