--- a/jeaf-generator-test-spring/pom.xml
+++ b/jeaf-generator-test-spring/pom.xml
@@ -40,33 +40,33 @@
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-web</artifactId>
-		    <version>${spring.boot.version}</version>
+		    <version>${spring.boot3.version}</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-validation</artifactId>
-		    <version>${spring.boot.version}</version>
+		    <version>${spring.boot3.version}</version>
 		</dependency>
 
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-security</artifactId>
-		    <version>${spring.boot.version}</version>
+		    <version>${spring.boot3.version}</version>
 		</dependency>
 		
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
-            <version>${spring.boot.version}</version>
+            <version>${spring.boot3.version}</version>
             <scope>test</scope>            
         </dependency>
 
 		<dependency>
 		    <groupId>org.springframework.security</groupId>
 		    <artifactId>spring-security-test</artifactId>
-            <version>${spring.security.version}</version>
+            <version>${spring.security7.version}</version>
             <scope>test</scope>            
 		</dependency>
 		
@@ -92,7 +92,7 @@
 		<dependency>
 		    <groupId>com.fasterxml.jackson.core</groupId>
 		    <artifactId>jackson-databind</artifactId>
-		    <version>${jackson.version}</version>
+		    <version>${jackson2.version}</version>
 		</dependency>
 		
 		<dependency>
