--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,7 @@
 		<module>jeaf-generator-test-service-objects-jakarta</module>
 		<module>jeaf-generator-test-pojos</module>
 		<module>jeaf-generator-test-pojos-generic-builder</module>
+        <module>jeaf-generator-test-pojos-jackson3</module>
 		<module>jeaf-generator-test-services-api</module>
 		<module>jeaf-generator-test-rest</module>
 		<module>jeaf-generator-test-services-api-runtime</module>
