Switched to released version of Jackson tools

--- a/jeaf-generator-test-spring-boot4/pom.xml
+++ b/jeaf-generator-test-spring-boot4/pom.xml
@@ -12,7 +12,7 @@
 	<packaging>jar</packaging>
 
     <properties>
-       <jeaf.json.impl.version>1.8.1-SNAPSHOT</jeaf.json.impl.version>
+       <jeaf.json.impl.version>2.0.0</jeaf.json.impl.version>
        <junit.version>6.0.2</junit.version>
     </properties>
 
