--- a/jeaf-generator-test-open-api-service-objects-jackson3/pom.xml
+++ b/jeaf-generator-test-open-api-service-objects-jackson3/pom.xml
@@ -12,8 +12,8 @@
 	<packaging>jar</packaging>
 	
 	<properties>
-	   <jeaf.json.api.version>1.8.1-SNAPSHOT</jeaf.json.api.version>
-	   <jeaf.json.impl.version>1.8.1-SNAPSHOT</jeaf.json.impl.version>
+	   <jeaf.json.api.version>2.0.0</jeaf.json.api.version>
+	   <jeaf.json.impl.version>2.0.0</jeaf.json.impl.version>
 	</properties>
 
 	<dependencies>
